p3-semantics/tests/Override3.mj.err
 line 11, column 22: error: default is incompatible with method type (p)
