p3-semantics/tests/Override3.mj
type 
  A  = object { a: int; p() };
  AB = A object { b: int };

def Pa(self: A);
def Pab(self: AB);

type T1 = AB object { p := Pab }; /* ok */
type T2 = A object { p := Pa }; /* ok */
type T3 = AB object { p := Pa }; /* ok */
type T4 = A object { p := Pab }; /* error */
